--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -1,10 +1,9 @@
 h2 {
      font-family: "Verdana";
-     color: #9C0;
+     color: rgba(0, 0, 0, 0.99);
  }
 
 .container > * {
-    display: inline-block;
     padding: 10px;
 }
 
